Revise service sections and update links
Updated service descriptions and improved content clarity. Changed headings and links for better accuracy.

--- a/index.html
+++ b/index.html
@@ -213,9 +213,10 @@
                         <i class="fa fa-bullseye purple-color"></i>
                         <h3>web Design</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                            magna aliquam erat volutpat.
+                            I create clean, modern, and responsive web designs that focus on user experience and visual
+                            appeal. I enjoy crafting intuitive layouts, smooth interfaces, and mobile-friendly designs
+                            using HTML, CSS, and JavaScript. My goal is to design websites that look attractive, feel
+                            seamless to use, and effectively communicate the brand’s message.
                         </p>
                     </div>
                 </div>
@@ -223,11 +224,13 @@
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s"
                         data-wow-delay="0.5s">
                         <i class="fa fa-code iron-color"></i>
-                        <h3>Web Development</h3>
+                        <h3>Full Stack Development</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                            magna aliquam erat volutpat.
+                            I am a full stack developer skilled in building end-to-end web applications with strong
+                            front-end design and reliable back-end functionality. I work with HTML, CSS, JavaScript,
+                            PHP, Python, MySQL, and frameworks like Django and Laravel to create responsive, secure, and
+                            efficient web solutions. I enjoy handling everything from UI design to database
+                            architecture, ensuring smooth performance across the entire application.
                         </p>
                     </div>
                 </div>
@@ -235,11 +238,13 @@
                     <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s"
                         data-wow-delay="0.7s">
                         <i class="fa fa-object-ungroup sky-color"></i>
-                        <h3>App Development</h3>
+                        <h3>Python Development</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                            magna aliquam erat volutpat.
+                            I build responsive and user-friendly websites using modern web technologies,
+                            focusing on clean UI, strong backend logic, and smooth performance. I have hands-on
+                            experience in developing full-stack web applications using HTML, CSS, JavaScript, PHP,
+                            Python, MySQL, Django, and Laravel. I enjoy turning ideas into functional digital
+                            solutions and creating websites that are both visually appealing and efficient.
                         </p>
                     </div>
                 </div>
@@ -332,7 +337,8 @@
                                                 scheme.
                                                 All variations are organized separately so you can use / customize the
                                                 template very easily.</p>
-                                            <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
+                                            <a href="https://github.com/Dr-LEO-MS/Finger-count-using-camera-py.git"
+                                                class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s"
                                                 data-wow-delay="0.7s">View Details</a>
                                             <div class="mh-testimonial mh-project-testimonial wow fadeInUp"
                                                 data-wow-duration="0.8s" data-wow-delay="0.9s">
@@ -447,7 +453,7 @@
                                                 <div class="percentagem-num">85%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 46%;"></div>
+                                                <div class="percentagem" style="width: 85%;"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -458,7 +464,7 @@
                                                 <div class="percentagem-num">68%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 38%;"></div>
+                                                <div class="percentagem" style="width: 68%;"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -492,7 +498,7 @@
                                                 <div class="percentagem-num">50%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 17%;"></div>
+                                                <div class="percentagem" style="width: 50%;"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -574,10 +580,10 @@
                                         <div class="mh-eduyear">2018-2020</div>
                                         <p>HSC: 58.5%<br>SSLC: 84.4%</p>
                                 </div>
-
                             </div>
                         </div>
                     </div>
+                    <img src="#" alt=" not load">
                 </div>
             </div>
     </section>
@@ -919,8 +925,8 @@
     <!-- Fancybox js-->
     <script src="assets/plugins/js/jquery.fancybox.min.js"></script>
     <!-- Map api -->
-    <!-- <script
-        src="http://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCRP2E3BhaVKYs7BvNytBNumU0MBmjhhxc"></script> -->
+    <!--<script  
+        src = "http://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCRP2E3BhaVKYs7BvNytBNumU0MBmjhhxc" ></script>
     -->
     <script src="assets/plugins/js/isotope.pkgd.js"></script>
     <script src="assets/plugins/js/packery-mode.pkgd.js"></script>
