--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i
                                         class="fa fa-envelope"></i><a href="mailto:">mssubhash07@gmail.com</a></li>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><i
-                                        class="fa fa-phone"></i><a href="callto:">+91 7305263247</a></li>
+                                        class="fa fa-phone"></i><a href="tel:+917305263247">+91 7305263247</a></li>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i
                                         class="fa fa-map-marker"></i>
                                     <address>Villuparm , TN</address>
@@ -834,7 +834,7 @@
                                     </div>
                                     <div class="each-info media-body">
                                         <h4>Phone</h4>
-                                        <a href="call no:+91 7305263247">+917305263247</a><br>
+                                        <a href="tel:+91 7305263247">+917305263247</a><br>
                                     </div>
                                 </div>
                             </div>
