--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                         class="fa fa-phone"></i><a href="tel:+917305263247">+91 7305263247</a></li>
                                 <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i
                                         class="fa fa-map-marker"></i>
-                                    <address>Villuparm , TN</address>
+                                    <address>Villupuram , TN</address>
                                 </li>
                             </ul>
 
@@ -809,7 +809,7 @@
                                     <div class="each-info media-body">
                                         <h4>Address</h4>
                                         <address>
-                                            Villuparm <br>
+                                            Villupuram <br>
                                         </address>
                                     </div>
                                 </div>
